FullBlogPlugin: Some fixes and improvements.
 * Added `shorten=True` to the timeline rendering of posts and comments.
 * Some CSS fixes for h2 and h3 rendering in `.blogflash` style (Trac default has negative margin for these).
 * New option `max_size` added to `[[BlogList]]` macro that truncates post body at the specified number of characters with link to 'Read more'.
 * Updated RSS feed to use correct logo absolute path reference following [trac:changeset:6384].


git-svn-id: https://trac-hacks.org/svn@3008 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/fullblogplugin/0.11/tracfullblog/htdocs/css/fullblog.css
+++ b/fullblogplugin/0.11/tracfullblog/htdocs/css/fullblog.css
@@ -115,6 +115,16 @@ div.blogflash {
     width: 400px;
 }
 
+div.blogflash h2, div.blogflash h3 {
+    margin-left: 0;
+    font-size: 1.2em;
+} 
+
+div.blogflash h3 {
+    margin-left: 0;
+    font-size: 1.1em;
+}
+
 div.blogflash .blog-title {
     font-size: 1.35em;
     margin-left: 0;
